# wagon-api

./: Cargo.toml
.github/workflows/: main.yml
api/: Cargo.toml
api-types/: Cargo.toml
api-types/resources/test/: create-crate-input.yaml  search-crates-output.yaml
api-types/src/: create.rs  error.rs  lib.rs  owners.rs  search.rs  yank.rs
api/src/: error.rs  ext.rs  lib.rs  main.rs  response.rs  result.rs  tokens.rs
authorizers/: Cargo.toml
authorizers/src/: error.rs  iam.rs  lib.rs  result.rs  token.rs
authorizers/src/jwt/: config.rs  keys.rs  mod.rs  types.rs
indexer/: Cargo.toml
indexer/src/: config.rs  error.rs  main.rs  repo.rs  result.rs  work_dir.rs
indexer/src/db/: error.rs  mod.rs  registries.rs  result.rs
infra/: cdk.json  package-lock.json  package.json  template.yaml
infra/lib/: api-handler-stack.ts  auth-stack.ts  cert-stack.ts  dashboard-stack.ts  indexer-stack.ts  infra-stack.ts  logs-widget-stack.ts  ssm-param-reader.ts  swagger-stack.ts  tokens-api-stack.ts  tokens-db-stack.ts  v1-api-stack.ts  wagon-api-stack.ts
infra/test/: infra.test.ts
scripts/: build.sh  deploy.sh  deps.sh  initiate-auth.sh  package.sh  synth.sh
