[package]
name = "api-types"
version = "0.1.0"
authors = ["Chris Dawes <cmsd2@cantab.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.60"
validator = { version = "0.12.0", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.4.2"
maplit = "1.0.2"

[dev-dependencies]
serde_yaml = "0.8.14"
