[package]
name = "api"
version = "0.1.0"
authors = ["Chris Dawes <cmsd2@cantab.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.11"
simple-error = "0.2.2"
aws_lambda_events = "0.3.1"
env_logger = "0.8.1"
http_router = { version = "0.1", default-features = false }
