[package]
name = "api"
version = "0.1.0"
authors = ["Chris Dawes <cmsd2@cantab.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda = { git = "https://github.com/awslabs/aws-lambda-rust-runtime.git" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.11"
simple-error = "0.2.2"
aws_lambda_events = "0.3.1"
env_logger = "0.8.1"
http_router = { default-features = false, git = "https://github.com/cmsd2/http_router" }
tokio = { version = "^0.2", features = ["full"] }
rusoto_core = "0.45.0"
rusoto_dynamodb = "0.45.0"
lazy_static = "1.4.0"
futures-core = "0.3.8"
maplit = "1.0.2"
rusoto_kms = "0.45.0"
bytes = "0.5"
base64 = "0.13.0"

