[package]
name = "api"
version = "0.1.0"
authors = ["Chris Dawes <cmsd2@cantab.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.11"
simple-error = "0.2.2"
env_logger = "0.8.1"
http_router = { default-features = false, git = "https://github.com/cmsd2/http_router" }
tokio = { version = "1", features = ["macros"] }
rusoto_core = "0.46.0"
rusoto_dynamodb = "0.46.0"
lazy_static = "1.4.0"
futures-core = "0.3.8"
maplit = "1.0.2"
rusoto_kms = "0.46.0"
bytes = "0.6.0"
base64 = "0.13.0"
api-types = { path = "../api-types" }
lambda_http = { version = "0.8.1", features = ["apigw_rest"] }
lambda_runtime = "0.8.1"
aws_lambda_events = { version = "0.10", features = ["apigw"] }
