[package]
name = "authorizers"
version = "0.1.0"
authors = ["Chris Dawes <cmsd2@cantab.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda = { git = "https://github.com/awslabs/aws-lambda-rust-runtime.git" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.11"
simple-error = "0.2.2"
aws_lambda_events = "0.3.1"
env_logger = "0.8.1"
tokio = { version = "^0.2", features = ["full"] }
jsonwebtoken = "7.2.0"
reqwest = { version = "0.10", features = ["json"] }
double-checked-cell-async = "2.0.2"
lazy_static = "1.4.0"
maplit = "1.0.2"
rusoto_core = "0.45.0"
rusoto_dynamodb = "0.45.0"
