[package]
name = "indexer"
version = "0.1.0"
authors = ["Chris Dawes <cmsd2@cantab.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = { version = "0.13.12", features = ["https"], default-features = false }
log = "0.4.11"
env_logger = "0.8.1"
tempdir = "0.3.7"

